test/conformance/chainsaw/generate-validating-admission-policy/validatingpolicy/missing-action/validatingadmissionpolicy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
    reports.kyverno.io/enabled: "true"
  name: vpol-missing-action
  ownerReferences:
  - apiVersion: policies.kyverno.io/v1beta1
    kind: ValidatingPolicy
    name: missing-action
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - apps
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - deployments
  variables:
  - expression: has(object.metadata.labels) && 'env' in object.metadata.labels &&
      object.metadata.labels['env'] == 'prod'
    name: environment
  validations:
  - expression: variables.environment == true
    message: Deployment labels must be env=prod
