test/conformance/chainsaw/generate-validating-admission-policy/validatingpolicy/missing-action/validatingadmissionpolicybinding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  name: vpol-missing-action-binding
  ownerReferences:
  - apiVersion: policies.kyverno.io/v1beta1
    kind: ValidatingPolicy
    name: missing-action
spec:
  policyName: vpol-missing-action
  validationActions:
  - Deny
